# X-SAT

./: CMakeLists.txt  README.md
data/non-airthmetic/: b14.aiger  b15.aiger  b17.aiger  b20.aiger  b21.aiger  b22.aiger  c3540.aiger  c5315.aiger  c7552.aiger  s15850.aiger  s35932.aiger  s38417.aiger  s38584.aiger
src/: main.cpp
src/conf/: options.hpp
src/libs/: heap.h  ra_queue.hpp  vec.h
src/solver/: analyze.cpp  backtrack.cpp  branch.cpp  clause.hpp  jheap.cpp  parse.cpp  preprocess.cpp  propagate.cpp  reduce.cpp  resolution.cpp  search.cpp  simulate.cpp  solver.cpp  solver.h  test.cpp  vmtf.cpp  watch.cpp
